Fixed line wrapping in code blocks.

--- a/public/style/pygments.scss
+++ b/public/style/pygments.scss
@@ -1,12 +1,14 @@
 .highlight {
 	background-color: #49483e;
 	font-size: 0.8em;
-	padding: 1em;
 	line-height: 1.4em;
+	overflow: auto;
+	padding: 1em;
 }
 
 .highlight pre {
-	margin: 0
+	margin: 0;
+	white-space: nowrap;
 }
 
 /* Line Number */
